CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(anet)
aux_source_directory(. DIR_SRCS)
add_definitions(-D_WINSOCK_DEPRECATED_NO_WARNINGS)
add_library(anet STATIC ${DIR_SRCS})

set_target_properties( anet PROPERTIES 
	ARCHIVE_OUTPUT_DIRECTORY ${OutPutDir}
	RUNTIME_OUTPUT_DIRECTORY ${OutPutDir}
	LIBRARY_OUTPUT_DIRECTORY ${OutPutDir} 
)